# insightengine

./: .gitignore  environment.yml  main.py  pyproject.toml  readme.md  todo.md
src/insightengine/app/: __init__.py
src/insightengine/cmd/: __init__.py
src/insightengine/config/: __init__.py  log.py  settings.py  user_settings.py
src/insightengine/core/: __init__.py
src/insightengine/models/: __init__.py
src/insightengine/models/orm/: __init__.py
src/insightengine/queue/: __init__.py
src/insightengine/services/: __init__.py
src/insightengine/services/crawler/: __init__.py
src/insightengine/services/extractor/: __init__.py
src/insightengine/services/orchestrator/: __init__.py
src/insightengine/services/parser/: __init__.py  abc.py  base.py  registry.py  text_utils.py  types.py
src/insightengine/services/parser/audio/: __init__.py  parser.py
src/insightengine/services/parser/excel/: __init__.py  parser.py
src/insightengine/services/parser/html/: __init__.py  parser.py
src/insightengine/services/parser/markdown/: __init__.py  parser.py
src/insightengine/services/parser/pdf/: __init__.py  parser.py
src/insightengine/services/parser/powerpoint/: __init__.py  parser.py
src/insightengine/services/parser/word/: __init__.py  parser.py
src/insightengine/services/vector/: __init__.py
src/insightengine/storage/: __init__.py
src/insightengine/storage/db/: __init__.py
src/insightengine/storage/oss/: __init__.py
src/insightengine/storage/vector/: __init__.py
src/insightengine/types/: __init__.py
src/insightengine/typings/: __init__.py
src/insightengine/utils/: __init__.py
src/insightengine/utils/log/: __init__.py  logger.py
tests/services/: __init__.py
tests/services/config/: __init__.py  test_config_log.py  test_config_settings.py  test_config_user_settings.py
tests/services/parser/: __init__.py  test_audio_parser.py  test_basic_parsers.py  test_excel_parser.py  test_html_parser.py  test_integration.py  test_markdown_parser.py  test_pdf_parser.py  test_registry.py  test_text_utils.py  test_types.py  test_word_parser.py
