[project]
name = "insightengine"
version = "0.1.0"
description = "InsightEngine is a core module of the another-mentor system that processes and analyzes user personal data to provide personalized vector search and recommendation services while building comprehensive user profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

]

[tool.setuptools.packages.find]
where = ["src"]
