[project]
name = "insightengine"
version = "0.1.0"
description = "InsightEngine is a core module of the another-mentor system that processes and analyzes user personal data to provide personalized vector search and recommendation services while building comprehensive user profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "markdown>=3.9,<4",
    "pypdf>=6.1.1,<7",
    "python-docx>=1.2.0,<2",
    "openpyxl>=3.1,<4",
    "xlrd>=2.0,<3",
    "xlwt>=1.3,<2",
    "ruff>=0.14.0,<0.15",
    "pytest>=8.4.2,<9",
    "paddlepaddle>=3.2.0,<4",
    "loguru>=0.7.3,<0.8",
    "pydantic>=2.12.0,<3",
    "pydantic-settings>=2.11.0,<3",
    "langchain-openai>=0.3.35,<0.4",
    "langchain-core>=0.3.78,<0.4",
    "mistune>=3.1.4,<4",
    "langchain-ollama>=0.3.10,<0.4",
    "httpx>=0.28.1,<0.29",
    "paddlespeech>=1.5.0,<2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["win-64", "linux-64"]

[tool.pixi.pypi-dependencies]
insightengine = { path = ".", editable = true }

[tool.pixi.tasks]
format = "ruff format"

[tool.pixi.dependencies]
python = "3.11.*"
python-pptx = ">=1.0.2,<2"

[tool.pixi.feature.cuda]
system-requirements = { cuda = "12" }


[tool.pixi.environments]
cuda = { features = ["cuda"] }

[dependency-groups]
cuda = ["paddlepaddle-gpu>=2.6.2,<3"]
